<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" Version="1.1.0.1">
  <DUT Name="ST_MotorConfig" Id="5b3761f3-37c8-43c9-ba54-2efedd4b36ca">
    <Declaration><![CDATA[(*******************************************************************************
                          protoc-gen-twincat V0.0.0.0                           
                  https://github.com/TcHaxx/protoc-gen-twincat                  
*******************************************************************************)
{attribute 'no-analysis'}
TYPE ST_MotorConfig :
STRUCT
	max_speed : REAL;
	acceleration : LREAL;
	timeout_ms : DWORD;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>